--- a/packages/api-client/playground/web/index.html
+++ b/packages/api-client/playground/web/index.html
@@ -9,7 +9,7 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
-    <title>Scalar API Client App</title>
+    <title>Scalar API Client Web</title>
   </head>
   <body>
     <div
